cryptpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptpad
  namespace: cryptpad
spec:
  selector:
    app: cryptpad
  ports:
    - name: http
      port: 3000
      targetPort: 3000
