cryptpad/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cryptpad
  namespace: cryptpad
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - cryptpad.goingdark.social
    - pad.goingdark.social
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cryptpad
          port: 3000
