cryptpad/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cryptpad
  namespace: cryptpad
spec:
  podSelector:
    matchLabels:
      app: cryptpad
  ingress:
    - ports:
        - port: 3000
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
